[workspace]
members = [
  "2018/01/solution",
  "2018/02/solution",
  "2018/03/solution",
  "2019/libs/intcode",
  "2019/01/solution",
  "2019/02/solution",
  "2019/03/solution",
  "2019/04/solution",
  "2019/05/solution",
  "2019/06/solution",
  "2019/07/solution",
  "2019/08/solution",
  "2019/09/solution",
  "2019/10/solution",
  "2019/11/solution",
  "2020/01/solution",
  "2020/02/solution"
]
