[package]
name = "aoc_2024_solution_02"
version = "0.1.0"
authors = ["benjaminch <benjamin.chastanier@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "2.0.3"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
